# generate-company-summary-via-generative-ai

./: README.md  generate-company-summary.ipynb  generate-multiple-summaries.py  pyproject.toml  utilities.py
