[tool.poetry]
name = "generate-company-summary"
version = "0.1.0"
description = ""
authors = ["Simon Handley <simongh@amazon.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
langchain = "^0.1.9"
langchain-community = "^0.0.24"
boto3 = "^1.34.51"
botocore = "^1.34.51"
python-dateutil = "^2.8.2"
dateparser = "^1.2.0"
amazon-textract-caller = "^0.2.2"
amazon-textract-textractor = "^1.7.4"
papermill = "^2.5.0"
ipykernel = "^6.29.3"
jinja2 = "^3.1.3"
beautifulsoup4 = "^4.12.3"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
